--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #267396;
+    background-color: #1ce1d7;
     color: #333;
 }
 
 header {
-    background-color: #23daca;
+    background-color: #267396;
     box-shadow: 0px 2px 5px rgba(17, 95, 150, 0.1);
     padding: 10px 20px;
     display: flex;
@@ -46,10 +46,14 @@ header .nav-links a {
     margin: 10px auto;
 }
 
-#contact {
-    margin: 5px 0;
-    padding: 0;
-    line-height: 1.4;
+#Contact\ Me {
+    margin: 0 auto;
+    line-height: 1.0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
 }
 
 img {
@@ -58,12 +62,39 @@ img {
 }
 
 #skills ul {
-    list-style: square;
-    padding-left: 20px;
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+    margin: 0;
 }
 
-#education p {
+#skills li {
+    font-weight: bold;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+}
+
+#skills h2 {
+    margin-bottom: 20px;
+}
+
+#skills {
+    text-align: center;
+}
+
+#Education {
     margin: 5px 0;
+    line-height: 1.0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    font-weight: normal;
 }
 
 #projects {
@@ -132,7 +163,7 @@ img {
     justify-content: space-between;
     align-items: center;
     padding: 50px 20px;
-    background-color: #f9f9f9;
+    background-color: #b0adad;
 }
 
 .hero-content {
